Setup bookkeeper connection and first bookie resource

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
             <artifactId>javax.activation-api</artifactId>
             <version>${libs.javaxactivation.api}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.bookkeeper</groupId>
+            <artifactId>bookkeeper-server</artifactId>
+            <version>${bookkeeper.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
