--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,10 @@
         <zookpeeper.version>3.5.4-beta</zookpeeper.version>
         <bookkeeper.version>4.9.0</bookkeeper.version>
         
-        <npm.version>6.8.0</npm.version>
-        <node.version>v10.0.0</node.version>
+        <yarn.version>v1.15.2</yarn.version>
+        <node.version>v11.8.0</node.version>
         <frontend.path>src/main/bvmui</frontend.path>
-        <maven.frontend.plugin.version>1.7.5</maven.frontend.plugin.version>
-        
-        <bookkeeper.version>4.9.0</bookkeeper.version>
-        <bookkeeper.version>4.9.0</bookkeeper.version>
+        <maven.frontend.plugin.version>1.7.6</maven.frontend.plugin.version>
         
         <jersey.version>2.27</jersey.version>
         <libs.jaxws.jaxb-api>2.3.0</libs.jaxws.jaxb-api>
@@ -124,34 +121,34 @@
                 <artifactId>frontend-maven-plugin</artifactId>
                 <version>${maven.frontend.plugin.version}</version>
                 <configuration>
-                    <npmVersion>${npm.version}</npmVersion>
+                    <yarnVersion>${yarn.version}</yarnVersion>
                     <nodeVersion>${node.version}</nodeVersion>
                     <installDirectory>target/</installDirectory>
                     <workingDirectory>${frontend.path}</workingDirectory>
                 </configuration>
                 <executions>
                     <execution>
-                        <id>install node and npm</id>
+                        <id>install node and yarn</id>
                         <goals>
-                            <goal>install-node-and-npm</goal>
+                            <goal>install-node-and-yarn</goal>
                         </goals>
                     </execution>
                     <execution>
-                        <id>npm install</id>
+                        <id>yarn install</id>
                         <goals>
-                            <goal>npm</goal>
+                            <goal>yarn</goal>
                         </goals>
                         <configuration>
                             <arguments>install</arguments>
                         </configuration>
                     </execution>
                     <execution>
-                        <id>npm run dist:prod</id>
+                        <id>yarn run build</id>
                         <goals>
-                            <goal>npm</goal>
+                            <goal>yarn</goal>
                         </goals>
                         <configuration>
-                            <arguments>run dist:prod</arguments>
+                            <arguments>run build</arguments>
                         </configuration>
                     </execution>
                 </executions>
