--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,10 @@
         <maven.frontend.plugin.version>1.7.6</maven.frontend.plugin.version>
         
         <jersey.version>2.27</jersey.version>
+        <libs.jetty>9.4.18.v20190429</libs.jetty>
+        <libs.spotbugs>3.1.9</libs.spotbugs>
+        <libs.spotbugsannotations>3.1.7</libs.spotbugsannotations>
+        <libs.asm.version>6.2</libs.asm.version>
         <libs.jaxws.jaxb-api>2.3.0</libs.jaxws.jaxb-api>
         <libs.jaxws.jaxb-impl>2.3.0</libs.jaxws.jaxb-impl>
         <libs.javaxactivation.api>1.2.0</libs.javaxactivation.api>
@@ -90,6 +94,18 @@
             <artifactId>bookkeeper-server</artifactId>
             <version>${bookkeeper.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.spotbugs</groupId>
+            <artifactId>spotbugs-annotations</artifactId>
+            <version>${libs.spotbugsannotations}</version>
+            <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.code.findbugs</groupId>
+                    <artifactId>jsr305</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
 
     <build>
@@ -152,7 +168,33 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>  
+            </plugin>
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>${libs.jetty}</version>
+                <configuration>
+                    <war> ${project.build.directory}/${project.build.finalName}</war>
+                    <webAppSourceDirectory>${frontend.path}/dist</webAppSourceDirectory>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.github.spotbugs</groupId>
+                <artifactId>spotbugs-maven-plugin</artifactId>
+                <version>${libs.spotbugs}</version>
+                <configuration>
+                    <effort>Max</effort>
+                    <maxHeap>4096</maxHeap>
+                    <fork>true</fork>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.ow2.asm</groupId>
+                        <artifactId>asm</artifactId>
+                        <version>${libs.asm.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
         </plugins>
     </build>
 </project>
