--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
                 
         <zookpeeper.version>3.5.4-beta</zookpeeper.version>
         <bookkeeper.version>4.9.0</bookkeeper.version>
+        <curator.version>4.2.0</curator.version>
+        <junit.version>4.12</junit.version>
         
         <yarn.version>v1.15.2</yarn.version>
         <node.version>v11.8.0</node.version>
@@ -21,6 +23,7 @@
         
         <jersey.version>2.27</jersey.version>
         <libs.jetty>9.4.18.v20190429</libs.jetty>
+        <libs.checkstyle>3.1.0</libs.checkstyle>
         <libs.spotbugs>3.1.9</libs.spotbugs>
         <libs.spotbugsannotations>3.1.7</libs.spotbugsannotations>
         <libs.asm.version>6.2</libs.asm.version>
@@ -106,6 +109,18 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-test</artifactId>
+            <version>${curator.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -132,7 +147,7 @@
                     </webResources>
                 </configuration>
             </plugin>
-            <plugin>
+<!--            <plugin>
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
                 <version>${maven.frontend.plugin.version}</version>
@@ -168,7 +183,7 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin>-->
             <plugin>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
