--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
         <session-timeout>30</session-timeout>
     </session-config>
     <context-param>
-        <param-name>config.file</param-name>
-        <param-value>example_server.properties</param-value>
+        <param-name>bookkeeper.visual.manager.config.path</param-name>
+        <param-value>/server.properties</param-value>
     </context-param>
 </web-app>
