--- a/src/main/bvmui/package.json
+++ b/src/main/bvmui/package.json
@@ -7,18 +7,18 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "axios": "0.18.0",
+    "axios": "^0.19.0",
     "lodash": "4.17.11",
     "vue": "2.6.10",
     "vue-router": "^3.0.6",
     "vuex": "3.1.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "3.7.0",
-    "@vue/cli-service": "3.7.0",
-    "sass": "1.20.1",
+    "@vue/cli-plugin-babel": "3.8.0",
+    "@vue/cli-service": "3.8.4",
+    "sass": "1.21.0",
     "sass-loader": "7.1.0",
     "vue-template-compiler": "2.6.10",
-    "webpack": "4.31.0"
+    "webpack": "4.35.0"
   }
 }
