Properties configuration implementation (#8)

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,4 +12,8 @@
     <session-config>
         <session-timeout>30</session-timeout>
     </session-config>
+    <context-param>
+        <param-name>bookkeeper.visual.manager.config.path</param-name>
+        <param-value>/bvm_conf.properties</param-value>
+    </context-param>
 </web-app>
