--- a/pom.xml
+++ b/pom.xml
@@ -272,6 +272,9 @@
                 <groupId>com.github.spotbugs</groupId>
                 <artifactId>spotbugs-maven-plugin</artifactId>
                 <version>${libs.spotbugs}</version>
+                <configuration>
+                    <excludeFilterFile>excludeFindBugsFilter.xml</excludeFilterFile>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
