--- a/src/main/bvmui/package.json
+++ b/src/main/bvmui/package.json
@@ -7,18 +7,29 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "0.19.0",
     "lodash": "4.17.15",
     "vue": "2.6.10",
-    "vue-router": "^3.1.3",
-    "vuex": "3.1.1"
+    "vue-router": "3.1.3",
+    "vuetify": "2.1.12",
+    "vuex": "3.1.2",
+    "yargs": "15.0.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "4.0.5",
-    "@vue/cli-service": "4.0.5",
-    "sass": "1.23.3",
+    "@mdi/font": "4.6.95",
+    "@vue/cli-plugin-babel": "4.1.1",
+    "@vue/cli-service": "4.1.1",
+    "sass": "1.23.7",
     "sass-loader": "8.0.0",
+    "vue-cli-plugin-vuetify": "2.0.2",
     "vue-template-compiler": "2.6.10",
+    "vuetify-loader": "1.4.2",
     "webpack": "4.41.2"
-  }
+  },
+  "browserslist": [
+    "last 1 version",
+    "> 1%",
+    "maintained node versions",
+    "not dead"
+  ]
 }
