--- a/src/main/bvmui/package.json
+++ b/src/main/bvmui/package.json
@@ -11,7 +11,8 @@
     "lodash": "4.17.15",
     "vue": "2.6.10",
     "vue-router": "^3.1.3",
-    "vuex": "3.1.1"
+    "vuex": "3.1.1",
+    "yarn": "^1.21.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.0.5",
