--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
         <curator.version>4.2.0</curator.version>
         <junit.version>4.12</junit.version>
         <mockito.version>1.10.19</mockito.version>
+        <jetty.version>9.4.18.v20190429</jetty.version>
+        <libs.curator>4.2.0</libs.curator>
         <!-- we need 0.14.0-SNAPSHOT as it supports BK 4.10.0 -->
         <herddb.version>0.14.0-SNAPSHOT</herddb.version>
 
