--- a/.gitignore
+++ b/.gitignore
@@ -21,9 +21,8 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/target/
 
 **/node_modules/**
 src/main/bvmui/dist/**
 /nbproject/
-/web/target/
+target/
