--- a/web/pom.xml
+++ b/web/pom.xml
@@ -169,6 +169,7 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
+                    <attachClasses>true</attachClasses>
                     <webResources>
                         <resource>
                             <directory>${frontend.path}/dist</directory>
