--- a/pom.xml
+++ b/pom.xml
@@ -284,6 +284,7 @@
     </build>
     <modules>
         <module>web</module>
+        <module>standalone</module>
     </modules>
     <repositories>
         <repository>
