--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,9 @@
         <netty.version>4.1.43.Final</netty.version>
         <netty.boringssl.version>2.0.26.Final</netty.boringssl.version>
         <curator.version>4.2.0</curator.version>
-        <junit.version>4.12</junit.version>
+        <junit.version>4.13</junit.version>
         <mockito.version>1.10.19</mockito.version>
+        <jetty.version>9.4.18.v20190429</jetty.version>
         <!-- we need 0.14.0-SNAPSHOT as it supports BK 4.10.0 -->
         <herddb.version>0.14.0-SNAPSHOT</herddb.version>
 
@@ -282,6 +283,7 @@
     </build>
     <modules>
         <module>web</module>
+        <module>standalone</module>
     </modules>
     <repositories>
         <repository>
