Add default user

--- a/standalone/src/main/resources/conf/server.properties
+++ b/standalone/src/main/resources/conf/server.properties
@@ -4,3 +4,8 @@ metadataServiceUri=zk+null://127.0.0.1:2181/ledgers
 # Jetty Server
 http.port=4500
 http.host=localhost
+
+
+# Users
+user.1.username=admin
+user.1.password=admin
